force-app/main/default/objects/Response__c/fields/effectiveDate__c.field-meta.xml
<CustomField>
    <fullName>effectiveDate__c</fullName>
    <label>effectiveDate</label>
    <type>Date</type>
</CustomField>