force-app/main/default/objects/Response__c/fields/orderId__c.field-meta.xml
<CustomField>
    <fullName>orderId__c</fullName>
    <label>orderId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>