force-app/main/default/objects/Response__c/fields/refundStatus__c.field-meta.xml
<CustomField>
    <fullName>refundStatus__c</fullName>
    <label>refundStatus</label>
    <length>18</length>
    <type>Text</type>
</CustomField>