force-app/main/default/objects/Response__c/fields/totalAmount__c.field-meta.xml
<CustomField>
    <fullName>totalAmount__c</fullName>
    <label>totalAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>